--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,12 +9,13 @@
     <div class="nav-logo">
         <%= link_to "Doaki", root_path, :class => "logo" %>
     </div>
-    <div class="nav-search-bar">
-        <input type="text" placeholder="O que está procurando?" class="nav-search">
-        <button class="nav-button-search">
-            <i class="material-icons search-icon">search</i>
-        </button>
-    </div>
+        <%= form_tag donations_path, :method => 'get', :class => "nav-search-bar" do %>
+            <%= text_field_tag :search, params[:search], :class => "nav-search", :placeholder => "O que está procurando?" %>
+            <%= button_tag(type: "submit", class:"nav-button-search") do %>
+                <i class="material-icons search-icon">search</i>
+            <% end %>
+        <% end %>
+
     <ul class="nav-buttons-list">
         <% if current_user %>
             <%= link_to 'DOAR',  new_donation_path, :class => "nav-buttons" %>
