--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -9,10 +9,7 @@
 	font-family: 'Montserrat', sans-serif;
 	padding: 1rem;
 	border-radius: 3.5px;
-	margin-right: auto;
-	margin-left: auto; 
-	margin-bottom: 2rem;
-	margin-top: 2rem;
+	margin: 2rem auto 2rem auto;
 	display: flex;
 	flex-direction: column;
 	-webkit-box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
@@ -66,6 +63,8 @@
 
 .input-description {
 	font-size: 12px;
+	max-width: 100%;
+	min-width: 100%;
 }
 
 .input-field {
